[gd_scene load_steps=3 format=2]

[ext_resource path="res://letter_box.tscn" type="PackedScene" id=1]
[ext_resource path="res://high_score_screen.gd" type="Script" id=3]

[node name="HighScoreScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -42.0
alignment = 1

[node name="LetterSelectBox1" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_left = 85.0
margin_right = 111.0

[node name="LetterSelectBox2" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_left = 115.0
margin_right = 141.0

[node name="LetterSelectBox3" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_left = 145.0
margin_right = 171.0
